<resources>
    <string name="app_name">Kenbie</string>
    <string name="temperature">%1$f °C / %2$f °F</string>
    <string name="network_fail">Network failed. Please try again.</string>
    <string name="fail_message">Something wrong. Please try later!</string>
    <string name="retry_title">Retry</string>
    <string name="std_title">Calculate 5 days deviation</string>
    <string name="twitter_consumer_key" translatable="false">7Pnd1lKNqfOte9XdHoQSBUYip</string>
    <string name="twitter_consumer_secret" translatable="false">Kf6wlWEsCelKav4XyCBXZNseae9V09OF6WoHJDwERJvl9EFtab</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">7Pnd1lKNqfOte9XdHoQSBUYip</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Kf6wlWEsCelKav4XyCBXZNseae9V09OF6WoHJDwERJvl9EFtab</string>
    <string name="facebook_app_id">1475037125888564</string>
    <string name="fb_login_protocol_scheme">fb1475037125888564</string>
    <string name="channel_name">Kenbie</string>
    <string name="channel_description">Kenbie Notifications Channels</string>
    <string name="default_notification_channel_id">Kenbie_Channel</string>
    <string name="select_picture">Select Picture</string>
    <string name="upload_image_title">Upload Image</string>
    <string name="select_photo_title">Select your photo here</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="asteriskred"><font color='#b8312f'>*</font></string>
    <string name="step_1">1/3</string>
    <string name="step_2">2/3</string>
    <string name="step_3">3/3</string>
    <string name="login_title">Log In</string>
    <string name="login_title_">LOG IN</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_title_">SIGN UP</string>
    <string name="login_email_title">Log in with Email</string>
    <string name="login_fb_title">Log in with Facebook</string>
    <string name="login_goo_title">Log in with Google</string>
    <string name="login_twitter_title">Log in with Twitter</string>
    <string name="welcome_title">Welcome to Kenbie</string>
    <string name="discover_title">Discover</string>
    <string name="create_account_title">Create Account</string>
    <string name="more_options_title">More Options</string>
    <string name="login_msg_title">Kenbie is trusted community marketplace for people to list, discover and book models around the world.</string>
    <string name="terms_title"><u>Terms of Service</u></string>
    <string name="s_end">&amp;</string>
    <string name="privacy_title"><u>Privacy Policy</u></string>
    <string name="home_title">Home</string>
    <string name="chat_title">Chat</string>
    <string name="search_title">Search</string>
    <string name="casting_title">Casting</string>
    <string name="extra_title">Extra</string>
    <string name="submit_title_">Submit</string>
    <string name="next_title">Next</string>
    <string name="social_u_title">Enter Social User Name</string>
    <string name="sort_title_">SORT</string>
    <string name="link_title_">LINK</string>
    <string name="url_title_">URL</string>
    <string name="unlink_title_">UNLINK</string>
    <string name="refine_title_">REFINE</string>
    <string name="view_models_title">View All Models ></string>
    <string name="online_title">Online \u2022</string>
    <string name="offline_title">Offline \u2022</string>
    <string name="likes_title">LIKES</string>
    <string name="fav_title">FAVORITE</string>
    <string name="Share_title">SHARE</string>
    <string name="edit_title">Edit</string>
    <string name="et_prof_title">EDIT PROFILE</string>
    <string name="chat_now_title">CHAT NOW</string>
    <string name="name_title">Name</string>
    <string name="type_title">Type</string>
    <string name="loc_title">Location</string>
    <string name="search_title_">SEARCH</string>
    <string name="loc_title_">LOCATION</string>
    <string name="guys_title">Guys</string>
    <string name="girls_title">Girls</string>
    <string name="both_title">Both</string>
    <string name="new_face_title">New Face</string>
    <string name="prof_title">Professional</string>
    <string name="casting_area_title">CASTING \nFEATURE</string>
    <string name="casting_info2_title">DIRECT CONTACT WITH THE MODELS!</string>
    <string name="casting_info4_title">USE THE CASTING FEATURES TO YOUR ADVANTAGE</string>
    <string name="casting_info5_title">Are you looking for a newcomer or a professional model? For female or male, blond or brunette, big or small, thick or thin models? If you have the exact model for your next shoot in mind, just create a casting, share your ideas with the world of Kenbie, lean back, and let the perfect cast approach you. Thanks to our casting features you can:</string>
    <string name="casting_info6_title">Thanks to our casting features you can:</string>
    <string name="mem_area_title">BECOME A\n<u>MEMBER NOW</u></string>
    <string name="mem_info3_title">Be seen by agents, photographers, and models. Newcomer models waiting to be discovered and professional photographers who have already gained experience in this business can network with agents and photographers, participate in castings, land international modeling jobs, and much more.</string>
    <string name="mem_info4_title">PREMIUM</string>
    <string name="mem_info5_title">Increase Your possibilities</string>
    <string name="mem_info6_title">Based on annual billing</string>
    <string name="mem_info7_title">Do you want international agencies, photographers and models find out about you? Become a premium member at Kenbie!</string>
    <string name="cel_area_title">CELEBRITY\n<u>AREA</u></string>
    <string name="cel_info2_title">ATTRACT MORE ATTENTION WITH YOUR PROFILE RIGHT AWAY</string>
    <string name="cel_info3_title">Be seen by agents, photographers, and models. In the celeb area, you can attract more attention.</string>
    <string name="cel_info4_title">ATTRACT MORE ATTENTION NOW!</string>
    <string name="cel_info5_title">Thanks to this feature in the CELEB area. As such, you’ll attract more attention and become a celebrity at Kenbie.</string>
    <string name="how_title">How?</string>
    <string name="cele_how1_title">Be listed at the way top as a celeb at Kenbie.</string>
    <string name="cele_how2_title">Attract the attention of the agents, photographers </string>
    <string name="cel_title">Celebrity</string>
    <string name="buy_now_title_">BUY NOW</string>
    <string name="pay_now_title">Pay Now</string>
    <string name="pay_now_title_">PAY NOW</string>
    <string name="cele_info_agree_title">I agree to pay 4.99</string>
    <string name="cele_privacy_title">I have read the</string>
    <string name="cele_terms_title">for online purchase and I agree with them.</string>
    <string name="category_title">Category</string>
    <string name="all_cat_title">All categories</string>
    <string name="discipline_title">Discipline</string>
    <string name="all_discipline_title">All disciplines</string>
    <string name="height_title">Height</string>
    <string name="weight_title">Weight</string>
    <string name="sel_weight_title">Select weight</string>
    <string name="bust_title">Bust</string>
    <string name="select_bust_title">Select bust</string>
    <string name="waist_title">Waist</string>
    <string name="select_waist_title">Select waist</string>
    <string name="hips_title">Hips</string>
    <string name="select_hips_title">Select hips</string>
    <string name="dress_title">Dress</string>
    <string name="select_dress_title">Select dress</string>
    <string name="eye_colour_title">Eye Colour</string>
    <string name="sel_eye_colour_title">Select eye colour</string>
    <string name="hair_colour_title">Hair Colour</string>
    <string name="sel_hair_colour_title">Select hair colour</string>
    <string name="ethnicity_title">Ethnicity</string>
    <string name="sel_ethnicity_title">Select ethnicity</string>
    <string name="lang_title">Languages</string>
    <string name="select_lang_title">Select language</string>
    <string name="advance_search_title">Advance Search</string>
    <string name="t_agree_title">I agree with the </string>
    <string name="terms1_title">Terms and Conditions. </string>
    <string name="terms1_title_">Terms &amp; Conditions</string>
    <string name="p_agree_title">Privacy Policy </string>
    <string name="age_title_">AGE</string>
    <string name="age_title">Age</string>
    <string name="apply_title">APPLY</string>
    <string name="to_title">to</string>
    <string name="time_title">Time</string>
    <string name="start_date_title">Start Date</string>
    <string name="closing_date_title">Closing Date</string>
    <string name="fees_title">Fees</string>
    <string name="who_title">Who I am</string>
    <string name="email_address_title">Email Address</string>
    <string name="email_address_title_">EMAIL ADDRESS</string>
    <string name="company_title_">COMPANY NAME</string>
    <string name="hint_company_title_">Enter your company name</string>
    <string name="enter_email_title">Enter your email id</string>
    <string name="enter_old_password_title">Enter old password</string>
    <string name="enter_new_password_title">Enter new password</string>
    <string name="confirm_password_title">Confirm password</string>
    <string name="enter_password_title">Enter your password</string>
    <string name="full_name_title">FULL NAME</string>
    <string name="password_title">PASSWORD</string>
    <string name="birth_title_">BIRTH DATE</string>
    <string name="birth_title">Birth Date</string>
    <string name="location_title_">LOCATION</string>
    <string name="gender_title">Gender</string>
    <string name="gender_title_">GENDER</string>
    <string name="within_title">Within</string>
    <string name="company_title">Company</string>
    <string name="mob_title">Mobile Number</string>
    <string name="country_title">Country</string>
    <string name="city_title">City</string>
    <string name="address_title">Address</string>
    <string name="street_title">Street</string>
    <string name="postal_code_title">Postal Code</string>
    <string name="agency_title">Are You From Agency</string>
    <string name="cancel_title">Cancel</string>
    <string name="cancel_title_">CANCEL</string>
    <string name="add_photo_title">Add Photos</string>
    <string name="g_share_title">Share Photo</string>
    <string name="g_delete_title">Delete Photo</string>
    <string name="g_make_avatar_title">Make it Avatar</string>
    <string name="day_title">Day</string>
    <string name="week_title">Week</string>
    <string name="month_title">Month</string>
    <string name="view_profile_title">View Your Profile</string>
    <string name="view_profile_stats_title">View Your Stats</string>
    <string name="profile_visitor_title">Profile Visitor</string>
    <string name="notification_title">Notifications</string>
    <string name="comments_title">Comments</string>
    <string name="profile_views_title">Profile Views</string>
    <string name="profile_comp_title">Your Profile Completeness</string>
    <string name="profile_section_title">Profile Section</string>
    <string name="profile_section_complete_action">Please complete this click here</string>
    <string name="photo_upload_title">Photo Upload</string>
    <string name="photo_upload_action">Please upload now click here</string>
    <string name="privacy_section_title">Privacy Section</string>
    <string name="privacy_section_action">Please complete this click here</string>
    <string name="send_title">Send</string>
    <string name="send_msg_title_">SEND MESSAGE</string>
    <string name="type_msg_title">Type a message</string>
    <string name="pwd_hint_title">********</string>
    <string name="sel_lang_title">Selected Language</string>
    <string name="action_example">Example action</string>
</resources>