<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.kenbie.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/top_header_bar_with_back_only" />


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_15"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                android:background="@drawable/ic_kenbie_logo" />

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_30"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:paddingLeft="@dimen/size_3"
                android:paddingRight="@dimen/size_3"
                android:text="@string/email_address_title_"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_email_title"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray_light"
                    android:textSize="@dimen/text_size_14"
                    android:theme="@style/TextLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:paddingLeft="@dimen/size_3"
                android:paddingRight="@dimen/size_3"
                android:text="@string/password_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_password_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray_light"
                    android:textSize="@dimen/text_size_14"
                    android:theme="@style/TextLabel"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:background="@drawable/btn_red_bg_style"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_25"
            android:visibility="gone">

            <TextView
                android:id="@+id/fb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fb_style"
                android:drawableLeft="@drawable/fb_icon"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/login_fb_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/g_plus_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:layout_marginBottom="@dimen/size_10"
                android:background="@drawable/g_plus_style"
                android:drawableLeft="@drawable/g_icon"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/login_goo_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/twitter_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/twitter_style"
                android:drawableLeft="@drawable/twitter_icon"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/login_twitter_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sign_in_email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30"
                android:background="@drawable/white_bg_with_black_outer_5dp"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/login_email_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:background="@drawable/btn_red_bg_style"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/create_account_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>