<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.kenbie.fragments.SignUpStepTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_15">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/ic_kenbie_logo" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_10"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginBottom="@dimen/size_30"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_30"
            android:paddingRight="@dimen/size_30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/size_15">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/size_8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/male_icon" />

                    <RadioButton
                        android:id="@+id/rb_male"
                        style="@style/MyRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_10"
                        android:layout_marginBottom="@dimen/size_5" />

                    <TextView
                        android:id="@+id/male_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_40"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/size_8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/female_icon" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        style="@style/MyRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_10"
                        android:layout_marginBottom="@dimen/size_5" />

                    <TextView
                        android:id="@+id/female_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:background="@drawable/btn_red_bg_style"
                android:gravity="center"
                android:padding="@dimen/size_10"
                android:text="@string/action_example"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/step_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/size_15"
            android:text="@string/step_2"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</FrameLayout>
